# torustiq-cpp-cli

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  cmd.sh  project.json
examples/pipelines/: stdio_echo.yaml
examples/torustiq_home/: .gitignore  config.yaml
src/: defs.hpp  main.cpp
src/commands/: abstract.cpp  abstract.hpp
src/commands/run/: run.cpp  run.hpp
src/config/: configuration.cpp  configuration.hpp
src/pipe/: pipeline.cpp  pipeline.hpp
src/pipe/stages/: abstract_stage.hpp  processor_stage.hpp  sink_stage.hpp  source_stage.hpp
src/pipeline/: pipeline.cpp  pipeline.hpp
src/pipeline/stages/: abstract_stage.cpp  abstract_stage.hpp  processor_stage.cpp  processor_stage.hpp  sink_stage.cpp  sink_stage.hpp  source_stage.cpp  source_stage.hpp
src/plugins/: abstract_plugin.cpp  abstract_plugin.hpp  stage_plugin.cpp  stage_plugin.hpp
src/plugins/builtin/: factory.cpp  factory.hpp
src/plugins/builtin/stdio/: stdio.cpp  stdio.hpp
src/system/: dll.hpp  env.cpp  env.hpp
src/typedefs/: configuration.hpp
src/typedefs/configuration/: configuration.hpp
src/typedefs/pipeline/: pipeline.hpp  stage.hpp
